<resources>
    <string name="app_name">BloggingApp</string>
    <string name="post_title">Post Title...</string>
    <string name="post_descroption">Post Description</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
</resources>
